# tsfeast

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  DESCRIPTION.md  Makefile  README.md  noxfile.py  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  contents.md  index.md  latex_index.md  tsfeast.rst
notebooks/: Example.ipynb  dummy_data.ipynb  hello_world.ipynb
tests/: conftest.py  test_hello_world.py  test_models.py  test_transformers.py  test_tsfeatures.py  test_utils.py
tests/valid_outputs/: all_transforms.json  dt_transform_only.json  uni_dt_features.json
tsfeast/: _base.py  funcs.py  metrics.py  models.py  splitter.py  transformers.py  tsfeatures.py  utils.py
