[metadata]
name = tsfeast
version = 0.1.0
author = Chris Santiago
email = cjsantiago@gatech.edu
license = MIT License
description = A collection of Scikit-Learn compatible time series transformers and tools.
long_description = file: README.md, LICENSE.txt

[options]
packages = tsfeast
python_requires = >= 3.7
include_package_data = true
zip_safe = False
install_requires =
    pandas>=1.1.0
    numpy
    holidays
    scikit-learn>=0.23.1
    statsmodels>=0.12.0

[options.extras_require]
dev =
    # doc packages
    sphinx
    furo
    myst-parser
    # testing packages
    pylint
    mypy
    pytest
    pytest-cov
    coverage
    # qa packages
    pre-commit
    tox
    check-manifest
    isort
    flake8
    # build packages
    twine
    wheel


[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 10
docstring-convention = numpy
extend-ignore = D

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[check-manifest]
ignore =
    docs
    docs/**
    notebooks
    notebooks/**
    .pre-commit-config.yaml
    .gitignore
    .pylintrc
